# ADAS-Infotainment-System

./: .gitignore  CMakeLists.txt  MainWindow.qml  README.md
Components/: DriveCluster.qml  LockIcon.qml  MediaPlayer.qml  MiniMap.qml  NavCard.qml  ParkOverlay.qml  Vehicle3D.qml
UI/: BottomBar.qml  LeftScreen.qml  RightScreen.qml  TopBar.qml
data/: 01.Video_60sec_yolo11n_detections.json  ego_telemetry.json
src/: detectionmodel.cpp  detectionmodel.h  hvachandler.cpp  hvachandler.h  lanemodel.cpp  lanemodel.h  main.cpp  mediacontroller.cpp  mediacontroller.h  navcontroller.cpp  navcontroller.h  profilemanager.cpp  profilemanager.h  systemhandler.cpp  systemhandler.h  themecontroller.cpp  themecontroller.h
